
syntax = "proto3";

package greet;

message Greeting {
  string first_name = 1;
  string last_name = 2;
}

message GreetReq {
  Greeting greeting = 1;
}

message GreetResp {
  string result = 1;
}

message GreetManyTimesReq {
  Greeting greeting = 1;
}

message GreetManyTimesResp {
  string result = 1;
}

message LongGreetReq {
  Greeting greeting = 1;
}

message LongGreetResp {
  string result = 1;
}

service GreetService{
  // Unary RPC.
  rpc Greet(GreetReq) returns (GreetResp);

  // Server streaming RPC
  rpc GreetManyTimes(GreetManyTimesReq) returns (stream GreetManyTimesResp);

  rpc LongGreet(stream LongGreetReq) returns (LongGreetResp);
}
